[package]
name = "livekit-gstreamer"
version = "0.0.1"
edition = "2021"
description = "Uses gstreamer to stream devices from Rust to Livekit rooms"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/oele-isis-vanderbilt/livekit-gstreamer.git"
homepage = "https://github.com/oele-isis-vanderbilt/livekit-gstreamer.git"
keywords = ["gstreamer", "livekit", "audio", "video", "streaming"]
authors = ["Umesh Timalsina <umesh.timalsina@vanderbilt.edu>"]

[dependencies]
chrono = "0.4.41"
gstreamer = "0.24.0"
gstreamer-app = "0.24.0"
gstreamer-video = "0.24.0"
livekit = { git="https://github.com/livekit/rust-sdks.git", package="livekit", features = ["rustls-tls-native-roots"] }
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
log = "0.4.22"
env_logger = "0.11.5"
livekit-api = {git="https://github.com/livekit/rust-sdks.git", package="livekit-api" }
